package com.generator.name;

// AUTO-GENERATED - edit 'Protobuf.stg' to make output-changes

option optimize_for = SPEED;

import "test.proto";
import "test2.proto";

message MessageOne {
   required string node = 1;
   required Type type = 2;
   required int64 id = 3;
   required int32 localtime = 4;
   optional bytes data = 5;
   message Result {
      required string url = 1;
      optional string title = 2;
      repeated string snippets = 3;
   }
}

//example comment
enum Type {
	ERROR = 1;
	ACK = 2;
}

message Error {
   required int32 errorId = 1;
   required string errorDescription = 2;
   optional bytes data = 3;
   optional MessageOne.Result result = 4;
   message LevelOne {
      message LevelTwo {   // Level 2
         required int64 ival = 1;
         optional bool booly = 2;
    }
  }
}

message Ack {
   required int64 requestor = 1;
   repeated Result result = 2;
   optional Error.LevelOne.LevelTwo level = 3;
}

message Result {
   required string key = 1; //key-comment
   required string val = 2; //val-comment
}

message Property {
   extensions 100 to max;
}

extend Property {
  optional int32 bar = 126;
}

message PropertyTwo {
   extensions 100 to 112;
}

//Car
message Car {

    // Car Vendor
    message Vendor {
        required string name = 1;

        // Car Vendor Address
        message Address {
            required string country = 1;
        }

        optional Address address = 2;
    }

    required string model  = 1;                 //Model name
    required Vendor vendor = 2;                 //Vendor information
    optional Speed  speed  = 3 [default=FAST];  //Car speed

    //Car speed enum
    enum Speed {
        FAST      = 1;
        SUPERFAST = 2;
    }

    //Car Holder
    message Holder {
        optional  string          first_name = 1;
        required  string          last_name  = 2;
        optional  Vendor.Address  address    = 3;
    }
}